# GitAlgos

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 20240101000000_initial.py  20240115000000_add_refresh_token_table.py
app/: deps.py  main.py  settings.py
app/analytics/: router.py
app/auth/: router.py  schemas.py  service.py
app/backtest/: engine_bt.py  metrics.py  plots.py  router.py
app/data/: alpha_vantage_provider.py  cache.py  rate_limit.py  router.py  yfinance_provider.py
app/db/: models.py  session.py
app/db/crud/: backtests.py  credentials.py  strategies.py  users.py
app/live/: alpaca_client.py  manager.py  oanda_client.py  router.py  ws.py
app/schemas/: common.py
app/sentiment/: news_stub.py  router.py  service.py  vader_provider.py
app/strategies/: registry.py  router.py  sandbox.py  schemas.py
app/strategies/examples/: rsi_reversion.py  sma_crossover.py
app/utils/: logging.py  security.py
app/workers/: queue.py  tasks.py
tests/: conftest.py  test_auth.py  test_backtest_smoke.py  test_sentiment.py  test_strategy_crud.py
